<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    android:orientation="vertical"
    tools:context="com.example.guo.lnproject.activity.HeadMethodActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dip"
        android:background="@color/toolbar_bg">
        <ImageView
            android:id="@+id/headmethod_backImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/img_back"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/headmethod_titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:layout_toRightOf="@id/headmethod_backImg"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/headmethod_typeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/head_laozhen"
            />
        <TextView
            android:id="@+id/headmethod_typedescTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/head_laozhen_desc"/>
    </LinearLayout>
    <View
        style="@style/AppDivider_Long"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="推荐使用以下方法"
        android:layout_margin="10dp"
        android:textSize="17sp"/>
    <View
        style="@style/AppDivider_Long"/>
    <RelativeLayout
        android:id="@+id/method1Layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/method1_nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_jianbeijiangying"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/method1_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/method1_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
        <View
            style="@style/AppDivider_Short"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/method2Layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/method2_nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_jianbeijiangying"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/method2_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/method2_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
        <View
            style="@style/AppDivider_Short"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/method3Layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/method3_nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_jianbeijiangying"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/method3_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/method3_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>
    <View
        style="@style/AppDivider_Long"/>
</LinearLayout>
