<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/head_topimg" />
    <View
        style="@style/AppDivider_Long"/>
    <RelativeLayout
        android:id="@+id/laozhenLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_laozhen"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/laozhen_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/laozhen_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
        <View
           style="@style/AppDivider_Short"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/shubiaoshouLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_shubiaoshou"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/shubiaoshou_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/shubiaoshou_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
        <View
            style="@style/AppDivider_Short"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bozisuantongLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_bozisuantong"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/bizisuantong_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/bizisuantong_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
        <View
            style="@style/AppDivider_Short"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/jianbeijiangyingyingLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/head_jianbeijiangying"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:id="@+id/jianbeijiangying_detailImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/jianbeijiangying_detailImg"
            android:text="查看详情"
            android:layout_marginRight="5dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            />
        <View
            style="@style/AppDivider_Short"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/head_clockLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/head_clock_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/sample_ic_bell"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="定时提醒"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/head_clock_img"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/head_detail"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        style="@style/AppDivider_Long"/>

</LinearLayout>